<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify_app_title">Spotify Streamer</string>
    <string name="scores_app_title">Scores App</string>
    <string name="scores_app_toast">Scores</string>
    <string name="library_app_title">Library App</string>
    <string name="library_app_toast">Library</string>
    <string name="build_it_bigger_title">Build It Bigger</string>
    <string name="xyz_reader_title">XYZ Reader</string>
    <string name="capstone_title">Capstone: My Own App</string>
    <string name="capstone_toast">capstone</string>
    <string name="toast_message">This button will launch my %1$s app!</string>
</resources>
