<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:background="@drawable/menu_background"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        tools:context=".MainActivity">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/title"
          android:layout_marginBottom="@dimen/menu_space"
          android:layout_gravity="center"
          android:textSize="20sp" />

        <Button
            android:id="@+id/spotify_button"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:background="@color/button_color"
            android:text="@string/spotify_app_title"/>

        <Button
            android:id="@+id/scores_button"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:background="@color/button_color"
            android:text="@string/scores_app_title"/>

        <Button
            android:id="@+id/library_button"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:background="@color/button_color"
            android:text="@string/library_app_title"/>

        <Button
            android:id="@+id/build_it_bigger_button"
            android:layout_width="219dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:background="@color/button_color"
            android:text="@string/build_it_bigger_title"/>

        <Button
            android:id="@+id/xyz_reader_button"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:background="@color/button_color"
            android:text="@string/xyz_reader_title"/>

        <Button
            android:id="@+id/capstone_button"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:background="@color/capstone_color"
            android:text="@string/capstone_title"/>

    </LinearLayout>

</FrameLayout>
